--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Sample JS</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- Optional theme
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
     <style>
         body {
@@ -39,81 +38,48 @@
 
                 <div class="row">
                     <div class="col-xs-12">
-                        <!--<form role="form" class="form-inline">
-                            <div class="form-group">
-                                <label for="search">Поиск</label>
-                                <input type="text" class="form-control" id="search" placeholder="Введите название товара">
-                            </div>
-                            <button type="submit" class="btn btn-success">Поиск</button>
-                        </form>-->
-
                         <div class="input-group bottom_margin">
                             <input id="searchText" type="text" class="form-control" placeholder="Search for...">
                             <span class="input-group-btn">
                                 <button id="searchBtn" class="btn btn-default" type="button">Search</button>
                             </span>
                         </div>
-
                     </div>
                 </div>
 
-                <ul class="list-group" id="products">
+                <ul class="list-group" id="products"></ul>
 
-                </ul>
-                <div id="products1">
-                </div>
             </div>
         </div>
 
     </div>
 
 
-    <script type="text/template" id="productTemplate">
-        <li class="list-group-item">
-            <div class="row">
-                <div class="col-xs-3">
-                    <img src="" class="placeholder img-rounded" alt="Product picture">
-                </div>
-                <div class="col-xs-5">
-                    <h5><%= product.title %></h5>
-                    <p><%= product.descr %></p>
-                    <p><span class="badge" title="Filter"><%= product.tag %></span></p>
-                </div>
-                <div class="col-xs-4">
-                    <p>Стоимость: $<%= product.price %></p>
-                </div>
-            </div>
-        </li>
-    </script>
-
-
-    <script type="text/template" id="productTemplatePanel">
+<script type="text/template" id="productTemplate">
+    <li class="list-group-item">
         <div class="row">
-            <div class="col-xs-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><%= product.title %></div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-6">
-                                $<%= product.descr %>
-                            </div>
-                            <div class="col-xs-6">
-                                Стоимость: $<%= product.price %>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-xs-3">
+                <img src="" class="placeholder img-rounded" alt="Product picture">
+            </div>
+            <div class="col-xs-5">
+                <h5><%= product.title %></h5>
+                <p><%= product.descr %></p>
+                <p><span class="badge" title="Filter"><%= product.tag %></span></p>
+            </div>
+            <div class="col-xs-4">
+                <p>Стоимость: $<%= product.price %></p>
             </div>
         </div>
-    </script>
+    </li>
+</script>
 
-    <script type="text/template" id="filterTemplate">
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="<%= tag %>"><%= title %>
-            </label>
-        </div>
-    </script>
+<script type="text/template" id="filterTemplate">
+    <div class="checkbox">
+        <label>
+            <input type="checkbox" value="<%= tag %>"><%= title %>
+        </label>
+    </div>
+</script>
 
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -159,9 +125,11 @@
     function renderProducts(search, filters) {
         var compiledTemplate = _.template($("#productTemplate").html());
         var resultHtml = "";
-//debugger
+
         for (var i = 0, max = products.length; i < max; i++) {
             var product = products[i];
+
+            // filtering and searching
             if (!product.isIncludedInSearch(search)) continue;
             if (filters && filters.length) {
                 var isIncluded = false;
@@ -174,6 +142,7 @@
                 if (!isIncluded) continue;
             }
 
+            // constructing products html
             var data = {
                 product: product
             };
@@ -186,16 +155,15 @@
 
     function updateProducts() {
         var search = $("#searchText").val();
-        var filter = [];// = $("#searchText").val();
 
+        var filter = [];
         $("#filters input[type=checkbox]:checked").each(function() {
-            //debugger
             filter.push(this.value);
         });
+
         renderProducts(search, filter);
         return false;
     }
-
 
 
     function renderFilters() {
