--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
     </style>
 
-    <script data-main="scripts/app" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
+    <script data-main="scripts/app" src="build/all.js"></script>
 
 </head>
 <body>
